  with most other versions of troff, but differs from Solaris troff.
* tbl: Storage space expansions because of long lines inside a table are
  now done properly.
* troff: The "\n[.ascender]" and "\n[.descender]" registers contain the
  typical extents of the current font above and below the base line,
  scaled to the current point size.
* [nt]roff: No "illegal number" warning is printed anymore when a "\}" is
  found as part of a possibly numeric argument, as in e.g. ".bp \}".
* [nt]roff: The ".mc" request does not require an argument so no warning
  is printed if it is given none.
* dpost: When a PDFMark Bookmark command is issued at the beginning of
  a page of intermediate output before any text has been printed, the
  value "4" is now substracted automatically to make the PDF viewer
  show the whole page top including margin.

Release 060221
* [nt]roff: With the ".hylang" request, the individual parts of words
  composed by "-" or "\(em" characters are now subject to hyphenation.
* troff: The ".fspacewidth" request has been introduced to set the width
  of the space character of a font.
* troff: For monospaced fonts, the space width is now set to the size of
  the "space" character in the AFM/TrueType/OpenType font metrics. This
  matches the traditional behavior of the "post" device with the "Courier"
  font, but was previously not done for "ps", which led to incorrect
  formatting.
* troff: Non-ASCII small characters were erroneously mapped to uppercase
  input characters. They are now mapped to lowercase input characters as
  it is done for ASCII characters.
* troff: When a regular font was chosen as fallback for an expert font,
  non-ASCII characters were selected from the regular font even if a
  matching character in the expert font existed.
* [nt]roff: Additional conditions are available with ".if": "c" to test
  for a glyph in the current font, "d" to test for the existence of a
  macro, and "r" to test for the existence of a number register.